--- a/main-page/views/product/product.ejs
+++ b/main-page/views/product/product.ejs
@@ -32,7 +32,7 @@
                             <a class="aa-product-img" href="#"><img id="imgsrc1" width="250px" height="300px" alt="polo shirt img" src=<%= info[i].image %> /></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                               <figcaption>
-                              <h4 class="aa-product-title"><a href="ProductDetail"><%= info[i].productName %></a></h4>
+                              <h4 class="aa-product-title"><a href="/products/detail?id=<%=info[i].productID%>""><%= info[i].productName %></a></h4>
                               <span class="aa-product-price"><%= info[i].sellPrice %> VNĐ</span><span class="aa-product-price"><del><%= info[i].sellPrice*10 %> đ</del></span>
                             </figcaption>
                           </figure>                        
