--- a/main-page/views/home/quickviewmodal.ejs
+++ b/main-page/views/home/quickviewmodal.ejs
@@ -52,7 +52,7 @@
                     </div>
                     <div class="aa-prod-view-bottom">
                       <a href="#" class="aa-add-to-cart-btn"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
-                      <a href="ProductDetail" class="aa-add-to-cart-btn">Chi tiết</a>
+                      <a id="linkProduct" href="" class="aa-add-to-cart-btn">Chi tiết</a>
                     </div>
                   </div>
                 </div>
