[main-page] edit promotion display

--- a/main-page/public/scss/modules/_sections.scss
+++ b/main-page/public/scss/modules/_sections.scss
@@ -541,6 +541,14 @@
 			color: #fff;
 			font-size: 15px;
 		}	
+		.aa-badge-right{
+			position: absolute;
+			top: 5%;
+			right: 0;
+			padding: 5px 10px;			
+			color: #fff;
+			font-size: 15px;
+		}
 		.aa-sale{
 			background-color: #008000;
 		}
