--- a/main-page/public/stylesheets/style.css
+++ b/main-page/public/stylesheets/style.css
@@ -1232,6 +1232,14 @@ img {
   color: #fff;
   font-size: 15px;
 }
+.aa-product-catg li .aa-badge-right {
+  position: absolute;
+  top: 5%;
+  right: 0;
+  padding: 5px 10px;
+  color: #fff;
+  font-size: 15px;
+}
 .aa-product-catg li .aa-sale {
   background-color: #008000;
 }
