add category files and set current active item in sidebar

--- a/admin-page/views/chart/chart.ejs
+++ b/admin-page/views/chart/chart.ejs
@@ -90,13 +90,13 @@
                 <div class="row">
 
                       <div class="col-md-10">
-                      <iframe
+                      <!-- <iframe
                         src="http://chart-scttshop.herokuapp.com/public/dashboard/19a88397-0e3d-4483-b967-1488691ccf1d"
                         frameborder="0"
                         style="width:120%;"
                         height="600"
                         allowtransparency
-                    ></iframe>
+                    ></iframe> -->
                   </div>
                   <!-- /.col -->
                 </div>
