--- a/admin-page/views/common/script.ejs
+++ b/admin-page/views/common/script.ejs
@@ -22,6 +22,20 @@
 <script src="dist/js/demo.js"></script>
 
 <script>
+   
+   $(document).ready(function(){
+                /** add active class and stay opened when selected */
+                var url = window.location;
+                // for sidebar menu entirely but not cover treeview
+                $('ul.sidebar-menu a').filter(function() {
+                     return this.href == url;
+                }).parent().addClass('active');
+
+                // for treeview
+                $('ul.treeview-menu a').filter(function() {
+                     return this.href == url;
+                }).parentsUntil(".sidebar-menu > .treeview-menu").addClass('active');
+            });
 
   window.onload=function(){
        $(function(){
@@ -124,3 +138,4 @@
 
 
 </script>
+
