--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -38,7 +38,7 @@
         <ul class="treeview-menu">
 
           <li>
-            <a href="/chart"><i class="fa fa-pie-chart"></i> Doanh Thu
+            <a href="/chart"><i class="fa fa-line-chart"></i> Doanh Thu
               <span class="pull-right-container">
               </span>
             </a>
@@ -70,7 +70,8 @@
               </span>
             </a>
             <ul class="treeview-menu">
-              <li><a href="/product"><i class="fa fa-shopping-cart"></i>Gian Hàng & Sản Phẩm</a></li>
+              <li><a href="/category"><i class="fa fa-tags"></i>Loại Sản Phẩm</a></li>
+              <li><a href="/product"><i class="fa fa-cart-plus"></i>Danh Sách Sản Phẩm</a></li>
               <li><a href="/order"><i class="fa fa-copy"></i> Tình Trạng Đơn Hàng</a></li>
             </ul>
           </li>
